@@ -1,3 +1,8 @@
+2002-03-07  Mike Kestner <mkestner@speakeasy.net>
+
+	* generator/CodeGenerator.cs : Refactor generatable iteration.
+	* generator/SymbolTable.cs : Add Generatables property to expose complex_types.Values.
+
 2002-03-02  Mike Kestner <mkestner@speakeasy.net>
 
 	* makefile : add linux build.
